--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,8 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #141414;
   --foreground: #f9f9f9;
-  --lightGray: #686868;
-  --grayVar: #262626;
-  --lightDark: #1f1f1f;
-  --greenVar: #30b94d;
-  --redVar: #e90516;
 
   font-weight: 500;
 }
